syntax = "proto3";
option java_outer_classname = "QueryCollatedExampleProto";

package com.snapchat.prism.udf.tfrecord.proto;

// Containers to hold repeated fundamental values.
message BytesList {
  repeated bytes value = 1;
}

message FloatList {
  repeated float value = 1 [packed = true];
}

message Int64List {
  repeated int64 value = 1 [packed = true, jstype = JS_STRING];
}

// Containers for non-sequential data.
message Feature {
  // Each feature can be exactly one kind.
  oneof kind {
    BytesList bytes_list = 1;
    FloatList float_list = 2;
    Int64List int64_list = 3;
  }
}

message Features {
  // Map from feature name to feature.
  map<string, Feature> feature = 1;
}

message QueryCollatedExample {
  Features query_features = 1;
  repeated Features item_featurez = 2;
}
